# AI-Image-Composer

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  DEV_README.MD  Makefile  README.md  SECURITY.md  StoryBacklog.md  docker-compose.full.yml  docker-compose.yml  eslint.config.mjs  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  images.yml  nightly-security.yml  release0-signoff.yml
apps/api/: Dockerfile  __init__.py  alembic.ini  dependencies.py  main.py  store.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260302_0001_initial_schema.py  20260303_0002_project_archiving.py
apps/api/db/: __init__.py  config.py  models.py  session.py
apps/api/models/: artifact_store.py  constraints.py  crud.py  jobs.py  scenespec.py
apps/api/security/: __init__.py  secrets.py
apps/api/services/: artifact_store.py  prompt_compiler.py  rate_limiter.py  relation_conflicts.py
apps/web/: Dockerfile  index.html  package.json
apps/web/src/: App.tsx  main.tsx  routes.ts  styles.css
apps/web/src/api/: http.ts  jobs.ts  projects.ts  scenes.ts
apps/worker/: Dockerfile  __init__.py  fake_adapters.py  model_adapters.py  worker.py
docs/: ARCHITECURAL_OVERVIEW.MD  CONCEPT.MD  FULL_CONTAINERIZATION.MD  IUR_CHECKLIST.MD  MODEL_ADAPTER_SETUP.MD  RELEASE_0_SIGNOFF.MD  SCENE_SPEC.MD  SECRETS_MANAGEMENT.MD  SUPPLY_CHAIN_VERIFICATION.MD
scripts/: aiic-watchdog.sh  backup-create.sh  backup-restore.sh  ci.sh  db-downgrade.sh  db-migrate.sh  db-up.sh  db-wait.sh  export-openapi.sh  format.sh  hooks-install.sh  install.sh  iur-directed-3layer.sh  iur-happy-path.sh  iur-smoke.sh  iur_smoke.py  lint.sh  scan.sh  secrets-check.sh  setup.sh  test.sh
tests/js/: canvas-math.test.ts  job-artifacts.test.ts  jobs-api.test.ts  scene-store.test.ts  scenespec.test.ts  smoke.test.ts  web-routes.test.ts
tests/python/: conftest.py  test_api_health.py  test_api_rate_limiting.py  test_api_scenespec_contract.py  test_artifact_store_api.py  test_db_schema_models.py  test_jobs_api.py  test_projects_scenes_crud.py  test_relation_conflicts.py  test_scene_to_render_happy_path.py  test_secrets_management.py  test_smoke.py  test_worker.py  test_worker_jobs.py
(+16 files in other folders)
