[project]
name = "ai-image-composer"
version = "0.1.0"
description = "Tooling and foundation for the AI Image Composer monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "bandit>=1.8.3",
  "pip-audit>=2.9.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0"
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["tests/python"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.bandit]
exclude_dirs = [".git", ".venv", "node_modules", "tests"]
skips = ["B101"]
