[project]
name = "ai-image-composer"
version = "0.1.0"
description = "Tooling and foundation for the AI Image Composer monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.5",
  "fastapi>=0.117.0",
  "python-multipart>=0.0.20",
  "psycopg[binary]>=3.2.10",
  "sqlalchemy>=2.0.43",
  "uvicorn>=0.35.0"
]

[dependency-groups]
dev = [
  "bandit>=1.8.3",
  "httpx>=0.28.1",
  "pre-commit>=4.2.0",
  "pip-audit>=2.9.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0"
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["tests/python"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps", "packages", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.bandit]
exclude_dirs = [".git", ".venv", "node_modules", "tests"]
skips = ["B101"]
